Add endpoint to verify erc20 capabilities of an address
